added some notification

--- a/src/main/java/gui/GPACalculator.form
+++ b/src/main/java/gui/GPACalculator.form
@@ -1,60 +1,64 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="gui.GPACalculator">
-  <grid id="27dc6" binding="root" layout-manager="GridLayoutManager" row-count="6" column-count="4" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+  <grid id="27dc6" binding="root" layout-manager="GridLayoutManager" row-count="6" column-count="7" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="1" left="1" bottom="1" right="1"/>
     <constraints>
-      <xy x="442" y="189" width="502" height="273"/>
+      <xy x="442" y="189" width="628" height="280"/>
     </constraints>
     <properties/>
     <border type="none"/>
     <children>
       <component id="b1785" class="javax.swing.JTextField" binding="textField1" default-binding="true">
         <constraints>
-          <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+          <grid row="1" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="-1"/>
           </grid>
         </constraints>
         <properties>
           <text value=""/>
+          <toolTipText value="e.p.: A"/>
         </properties>
       </component>
       <component id="c90f9" class="javax.swing.JTextField" binding="textField2" default-binding="true">
         <constraints>
-          <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+          <grid row="2" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="-1"/>
           </grid>
         </constraints>
         <properties>
           <text value=""/>
+          <toolTipText value="e.p.: A"/>
         </properties>
       </component>
       <component id="12d92" class="javax.swing.JTextField" binding="textField3" default-binding="true">
         <constraints>
-          <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+          <grid row="3" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="-1"/>
           </grid>
         </constraints>
         <properties>
           <text value=""/>
+          <toolTipText value="e.p.: A"/>
         </properties>
       </component>
       <component id="d2038" class="javax.swing.JTextField" binding="textField4" default-binding="true">
         <constraints>
-          <grid row="4" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+          <grid row="4" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="200" height="-1"/>
           </grid>
         </constraints>
         <properties>
           <text value=""/>
+          <toolTipText value="e.p.: A"/>
         </properties>
       </component>
       <component id="fa2a4" class="javax.swing.JComboBox" binding="comboBox2" default-binding="true">
         <constraints>
-          <grid row="2" column="2" row-span="1" col-span="2" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="2" column="3" row-span="1" col-span="3" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <model>
-            <item value="College/Carrer Prep, Others"/>
+            <item value="College/Carrier Prep. Others"/>
             <item value="Elective"/>
             <item value="Honors"/>
             <item value="AP"/>
@@ -63,11 +67,11 @@
       </component>
       <component id="4b1f7" class="javax.swing.JComboBox" binding="comboBox3" default-binding="true">
         <constraints>
-          <grid row="3" column="2" row-span="1" col-span="2" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="3" column="3" row-span="1" col-span="3" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <model>
-            <item value="College/Carrer Prep, Others"/>
+            <item value="College/Carrier Prep. Others"/>
             <item value="Elective"/>
             <item value="Honors"/>
             <item value="AP"/>
@@ -76,11 +80,11 @@
       </component>
       <component id="3e138" class="javax.swing.JComboBox" binding="comboBox4" default-binding="true">
         <constraints>
-          <grid row="4" column="2" row-span="1" col-span="2" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="4" column="3" row-span="1" col-span="3" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <model>
-            <item value="College/Carrer Prep, Others"/>
+            <item value="College/Carrier Prep. Others"/>
             <item value="Elective"/>
             <item value="Honors"/>
             <item value="AP"/>
@@ -89,11 +93,11 @@
       </component>
       <component id="73b4a" class="javax.swing.JComboBox" binding="comboBox1" default-binding="true">
         <constraints>
-          <grid row="1" column="2" row-span="1" col-span="2" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="1" column="3" row-span="1" col-span="3" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <model>
-            <item value="College/Carrer Prep, Others"/>
+            <item value="College/Carrier Prep. Others"/>
             <item value="Elective"/>
             <item value="Honors"/>
             <item value="AP"/>
@@ -134,36 +138,18 @@
       </component>
       <component id="1150c" class="javax.swing.JLabel">
         <constraints>
-          <grid row="0" column="2" row-span="1" col-span="2" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="0" column="3" row-span="1" col-span="3" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Course Type"/>
-        </properties>
-      </component>
-      <component id="a3263" class="javax.swing.JButton" binding="getGPAButton" default-binding="true">
-        <constraints>
-          <grid row="5" column="0" row-span="1" col-span="3" vsize-policy="0" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties>
-          <text value="Get GPA"/>
-        </properties>
-      </component>
-      <component id="55c60" class="javax.swing.JTextArea" binding="textArea1" default-binding="true">
-        <constraints>
-          <grid row="5" column="3" row-span="1" col-span="1" vsize-policy="6" hsize-policy="6" anchor="0" fill="0" indent="0" use-parent-layout="false">
-            <preferred-size width="150" height="50"/>
-          </grid>
-        </constraints>
-        <properties>
-          <text value=""/>
+          <text value="Course type"/>
         </properties>
       </component>
       <component id="3227d" class="javax.swing.JLabel">
         <constraints>
-          <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="0" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Enter your grade here"/>
+          <text value="Enter your grade here in alphabet letter"/>
         </properties>
       </component>
       <component id="6a7cd" class="javax.swing.JLabel">
@@ -172,6 +158,116 @@
         </constraints>
         <properties>
           <text value="Courses"/>
+        </properties>
+      </component>
+      <component id="a3263" class="javax.swing.JButton" binding="getGPAButton" default-binding="true">
+        <constraints>
+          <grid row="5" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value="Get GPA"/>
+        </properties>
+      </component>
+      <component id="55c60" class="javax.swing.JTextArea" binding="textArea1" default-binding="true">
+        <constraints>
+          <grid row="5" column="5" row-span="1" col-span="1" vsize-policy="6" hsize-policy="6" anchor="0" fill="0" indent="0" use-parent-layout="false">
+            <preferred-size width="150" height="50"/>
+          </grid>
+        </constraints>
+        <properties>
+          <text value=""/>
+        </properties>
+      </component>
+      <component id="62392" class="javax.swing.JLabel">
+        <constraints>
+          <grid row="5" column="4" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value="Result: "/>
+        </properties>
+      </component>
+      <component id="8b003" class="javax.swing.JLabel">
+        <constraints>
+          <grid row="0" column="6" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value="Credit"/>
+        </properties>
+      </component>
+      <component id="64819" class="javax.swing.JComboBox" binding="comboBox5" default-binding="true">
+        <constraints>
+          <grid row="1" column="6" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <model>
+            <item value="1"/>
+            <item value="1.5"/>
+            <item value="2"/>
+            <item value="2.5"/>
+            <item value="3"/>
+            <item value="3.5"/>
+            <item value="4"/>
+            <item value="4.5"/>
+            <item value="5"/>
+            <item value="5.5"/>
+          </model>
+        </properties>
+      </component>
+      <component id="5cd81" class="javax.swing.JComboBox" binding="comboBox6" default-binding="true">
+        <constraints>
+          <grid row="2" column="6" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <model>
+            <item value="1"/>
+            <item value="1.5"/>
+            <item value="2"/>
+            <item value="2.5"/>
+            <item value="3"/>
+            <item value="3.5"/>
+            <item value="4"/>
+            <item value="4.5"/>
+            <item value="5"/>
+            <item value="5.5"/>
+          </model>
+        </properties>
+      </component>
+      <component id="aec52" class="javax.swing.JComboBox" binding="comboBox7" default-binding="true">
+        <constraints>
+          <grid row="3" column="6" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <model>
+            <item value="1"/>
+            <item value="1.5"/>
+            <item value="2"/>
+            <item value="2.5"/>
+            <item value="3"/>
+            <item value="3.5"/>
+            <item value="4"/>
+            <item value="4.5"/>
+            <item value="5"/>
+            <item value="5.5"/>
+          </model>
+        </properties>
+      </component>
+      <component id="a8660" class="javax.swing.JComboBox" binding="comboBox8" default-binding="true">
+        <constraints>
+          <grid row="4" column="6" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <model>
+            <item value="1"/>
+            <item value="1.5"/>
+            <item value="2"/>
+            <item value="2.5"/>
+            <item value="3"/>
+            <item value="3.5"/>
+            <item value="4"/>
+            <item value="4.5"/>
+            <item value="5"/>
+            <item value="5.5"/>
+          </model>
         </properties>
       </component>
     </children>
