--- a/src/main/java/gui/GPACalculator.form
+++ b/src/main/java/gui/GPACalculator.form
@@ -3,7 +3,7 @@
   <grid id="27dc6" binding="root" layout-manager="GridLayoutManager" row-count="6" column-count="7" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="1" left="1" bottom="1" right="1"/>
     <constraints>
-      <xy x="442" y="189" width="628" height="280"/>
+      <xy x="442" y="189" width="737" height="280"/>
     </constraints>
     <properties/>
     <border type="none"/>
@@ -149,7 +149,7 @@
           <grid row="0" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Enter your grade here in alphabet letter"/>
+          <text value="Enter your grade here in capitalized alphabet(e.p.: B+) letter"/>
         </properties>
       </component>
       <component id="6a7cd" class="javax.swing.JLabel">
